<resources>
    <string name="app_name">Football Fan App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="top_leagues">Top Leagues</string>
    <string name="upcoming_matches">Upcoming Matches</string>
    <string name="favourite_team">Favourite Team</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="no_internet_connection_sad_face">No internet connection sad face</string>
    <string name="starts">Starts:</string>
    <string name="ends">Ends:</string>
    <string name="colon">:</string>
    <string name="halfTime_mark">HT</string>
    <string name="fullTime_mark">FT</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="total">TOTAL</string>
    <string name="home">HOME</string>
    <string name="away">AWAY</string>
    <string name="finished">FINISHED</string>
    <string name="scheduled">SCHEDULED</string>
    <string name="player_name">Player Name</string>
    <string name="goals">Goals</string>
    <string name="position">Position</string>
    <string name="sharp">#</string>
    <string name="team_name">Team Name</string>
    <string name="m">M</string>
    <string name="w">W</string>
    <string name="d">D</string>
    <string name="l">L</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="pts">Pts</string>
    <string name="No_matches_today">No matches today</string>
    <string name="club_icon">Club icon</string>
    <string name="stadium_icon">Stadium icon</string>
    <string name="coach">Coach</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="nationality">Nationality</string>
    <string name="save_to_favorites">Save to favorites</string>
    <string name="team_added_to_favorites">Team added to favorites</string>
    <string name="team_removed_from_favorites">Team removed from favorites</string>
    <string name="no_favorite_teams_yet">No favorite teams yet.</string>
    <string name="delete_favorite_team">Delete favorite team</string>
    <string name="founded">Founded:</string>
</resources>