<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        tools:context=".ui.fragments.leagueTable.LeagueTableFragment">


        <LinearLayout
            android:id="@+id/linearLayout_withChips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backgroundColor"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/tableNames_constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/upcomingMatches_ChipGroup"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/standingTypeTotal_chip"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:checked="true"
                    android:text="@string/total" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/standingTypeHome_chip"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/home" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/standingTypeAway_chip"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/away" />

            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tableNames_constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foregroundGravity="center"
            app:layout_constraintBottom_toTopOf="@id/leagueTableRecyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout_withChips">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/backgroundColor"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/position"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:layout_margin="2dp"
                        android:gravity="center"
                        android:text="@string/sharp"
                        android:textSize="14sp" />

                    <ImageView
                        android:id="@+id/clubIcon_imageView"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:layout_margin="2dp"
                        android:cropToPadding="true"
                        tools:srcCompat="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/club_name"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="2dp"
                        android:maxLines="2"
                        android:text="@string/team_name"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/matchesPlayed"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:layout_margin="2dp"
                        android:gravity="center"
                        android:text="@string/m"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/matchesWon"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:layout_margin="2dp"
                        android:gravity="center"
                        android:text="@string/w"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/matchesDraw"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:layout_margin="2dp"
                        android:gravity="center"
                        android:text="@string/d"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/matchesLost"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:layout_margin="2dp"
                        android:gravity="center"
                        android:text="@string/l"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/goalsFor"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:layout_margin="2dp"
                        android:gravity="center"
                        android:text="@string/plus"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/goalsAgainst"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:layout_margin="2dp"
                        android:gravity="center"
                        android:text="@string/minus"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/points"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:layout_margin="2dp"
                        android:gravity="center"
                        android:text="@string/pts"
                        android:textSize="12sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/leagueTableRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tableNames_constraintLayout" />

        <ImageView
            android:id="@+id/sadFace_imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:alpha="0.7"
            android:contentDescription="@string/no_internet_connection_sad_face"
            android:src="@drawable/ic_sad_face"
            android:visibility="invisible"
            tools:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.407" />

        <TextView
            android:id="@+id/error_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:alpha="0.7"
            android:text="@string/no_internet_connection"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@id/sadFace_imageView"
            app:layout_constraintStart_toStartOf="@id/sadFace_imageView"
            app:layout_constraintTop_toBottomOf="@+id/sadFace_imageView"/>

        <RelativeLayout
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="30dp"
                android:layout_height="30dp" />

        </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>