<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        tools:context=".ui.fragments.teamSquad.TeamSquadFragment">

        <TextView
            android:id="@+id/coach_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coach"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/teamSquad_recyclerView"
            app:layout_constraintEnd_toEndOf="@id/teamSquad_recyclerView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/coachName_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="Olegunnar Solskjer"
            app:layout_constraintTop_toBottomOf="@id/coach_tv"
            app:layout_constraintStart_toStartOf="@id/coach_tv"
            app:layout_constraintEnd_toEndOf="@id/coach_tv"/>

        <LinearLayout
            android:id="@+id/teamSquadHeader_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/backgroundColor"
            app:layout_constraintStart_toStartOf="@id/teamSquad_recyclerView"
            app:layout_constraintEnd_toEndOf="@id/teamSquad_recyclerView"
            app:layout_constraintTop_toBottomOf="@id/coachName_tv"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/teamSquad_position"
                android:layout_width="15dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sharp"
                android:layout_margin="2dp"
                android:gravity="center"
                android:textSize="12sp"
                tools:text="#" />

            <TextView
                android:id="@+id/teamSquad_playerName"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:maxLines="2"
                android:text="@string/player_name"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/teamSquad_dateOfBirth"
                android:layout_width="67dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="2dp"
                android:text="@string/date_of_birth"
                android:maxLines="2"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/teamSquad_nationality"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:gravity="center"
                android:text="@string/nationality"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/teamSquad_positionName"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="3dp"
                android:maxLines="2"
                android:text="@string/position"
                android:textSize="12sp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/teamSquad_recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/teamSquadHeader_ll" />

        <ImageView
            android:id="@+id/sadFace_imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:alpha="0.7"
            android:contentDescription="@string/no_internet_connection_sad_face"
            android:src="@drawable/ic_sad_face"
            android:visibility="invisible"
            tools:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.407" />

        <TextView
            android:id="@+id/error_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:alpha="0.7"
            android:text="@string/no_internet_connection"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@id/sadFace_imageView"
            app:layout_constraintStart_toStartOf="@id/sadFace_imageView"
            app:layout_constraintTop_toBottomOf="@+id/sadFace_imageView"/>

        <RelativeLayout
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="30dp"
                android:layout_height="30dp" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>