<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        tools:context=".ui.fragments.leagueTopScorers.LeagueTopScorersFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/leagueTopScorers_cardView"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center"
                android:background="@color/backgroundColor"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/leagueTopScorers_ScorerPosition"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_margin="3dp"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:text="@string/sharp" />

                <ImageView
                    android:id="@+id/leagueTopScorers_ScorerClubIcon_imageView"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_margin="3dp"
                    android:cropToPadding="true"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/leagueTopScorers_player_name"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="3dp"
                    android:maxLines="2"
                    android:text="@string/player_name"
                    android:textSize="14sp"
                    tools:text="Player Name" />

                <TextView
                    android:id="@+id/leagueTopScorers_goalsScored"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="3dp"
                    android:gravity="center"
                    android:text="@string/goals"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/leagueTopScorers_position"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="3dp"
                    android:maxLines="2"
                    android:text="@string/position"
                    android:textSize="14sp"
                    tools:text="Position" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/leagueTopScorersRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/leagueTopScorers_cardView"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/sadFace_imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:alpha="0.7"
            android:contentDescription="@string/no_internet_connection_sad_face"
            android:src="@drawable/ic_sad_face"
            android:visibility="invisible"
            tools:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.407" />

        <TextView
            android:id="@+id/error_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:alpha="0.7"
            android:text="@string/no_internet_connection"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@id/sadFace_imageView"
            app:layout_constraintStart_toStartOf="@id/sadFace_imageView"
            app:layout_constraintTop_toBottomOf="@+id/sadFace_imageView"/>

        <RelativeLayout
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="30dp"
                android:layout_height="30dp" />

        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>