<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="match"
            type="com.example.footballfanapp.models.UpcomingMatchesModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.leagueUpcomingMatches.LeagueUpcomingMatchesFragment">

        <LinearLayout
            android:id="@+id/leagueUpcomingMatches_LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/leagueUpcomingMatches_ChipGroup"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/finished_chip"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:checked="true"
                    android:text="@string/finished" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/scheduled_chip"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/scheduled" />

            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/leagueUpcomingMatchesRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/leagueUpcomingMatches_LinearLayout"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/leagueUpcomingMatches_sadFace_imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:alpha="0.7"
            android:contentDescription="@string/no_internet_connection_sad_face"
            android:src="@drawable/ic_sad_face"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.407" />

        <TextView
            android:id="@+id/leagueUpcomingMatches_error_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:alpha="0.7"
            android:text="@string/no_internet_connection"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@id/leagueUpcomingMatches_sadFace_imageView"
            app:layout_constraintStart_toStartOf="@id/leagueUpcomingMatches_sadFace_imageView"
            app:layout_constraintTop_toBottomOf="@+id/leagueUpcomingMatches_sadFace_imageView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>